Kiwix 0.9 alpha1
* Hebrew localization
* Chinese localization
* Persian localization
* Bookmarks and Notes (experimental)
* Introduction of kiwix-compact.sh able to simply reduce by ~50% indexes (ID: 2834599)

Kiwix 0.8 rc3
* Small improvement by the kiwix.sh launcher (should work now under Slackware (see https://sourceforge.net/forum/message.php?msg_id=7561932)

Kiwix 0.8 rc2
* Use xapian-core-1.0.14
* Fix the "no icons available" issue (ID: 2830824)
* Fixed toolbar icons with RTL languages
* Improved toolbar UI (added icons & tooltip)
* Fixed window size/position restore
* Fixed address-bar not displaying TOC URLs (ID: 2806208)
* Fixed anchored link not working (ID: 2806207)
 
Kiwix 0.8 rc1
* High reducing of the xapian index disk usage
* Improvement of the history management
* Ignore now, by indexing, HTML pages with the NOINDEX meta tag
* French/Spanish/German translation of the software help
* Fixed language switch menu (ID: 2822178)
* Arabic localization
* Use now mainly xulrunner icon set

Kiwix 0.8 beta5
* Small improvements of the Spanish translations&shortcuts
* Bug fix by the indexing process observer (ID: 2811642)
* Add a gray version of the buttons
* First version of a software help
* Add a cache strategy

Kiwix 0.8 beta4
* Random page feature (ID: 2799134)
* Fix an issue concerning URLs with local anchors (ID: 2798769)
* Localisation of Xulrunner builtins (ID: 2799815)

Kiwix 0.8 beta3
* Rewrite the buggy MD5 code
* Improvement of the GUI Spanish translation
* Remember the window geometry (ID: 1671235)
* Use xapian-core-1.0.13

Kiwix 0.8 beta2
* GUI in Italian (ID: 2799146)
* 32 bits support for large ZIM file (ID: 2801839)